# Robot-Bleu

./: .env.example  .gitignore  README.md  Robot Bleu.txt  bot.py  pyproject.toml  requirements.txt  robot-bleu.service
robot_bleu/: __init__.py  agent.py  bot.py  config.py  main.py  session.py  tools.py
robot_bleu/cogs/: listener.py  model_management.py  tts.py
robot_bleu/utils/: context_management.py  file_extensions.py  queue_management.py
tests/: test_agent.py  test_session.py  test_tools.py
