[project]
name = "robot-bleu"
version = "0.1.0"
description = "Bot Discord conversationnel agentique"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4",
    "duckduckgo-search>=8.1.1",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
robot-bleu = "robot_bleu.main:main"
