[project]
name = "robot-bleu"
version = "0.1.0"
description = "Bot Discord conversationnel agentique"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.14.0",
    "ddgs>=9.11.2",
    "discord-py>=2.4",
    "httpx>=0.28.1",
    "openai>=2.26.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
robot-bleu = "robot_bleu.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
